--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-<<<<<<< HEAD
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"ff26d00b88414d9f9e225fc2b40b9226","expires":1}</script>
-=======
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x6a7b084d00e46a4a9bba4a7824283fb","expires":1}</script>
->>>>>>> 87fab4499c0c14258eea188a946857ef62b9adb8
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x6ed9bb9bb054c1cb5270ac9284e5dff","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -94,9 +90,9 @@ class: center, middle, inverse, title-slide
 ]
 
 .pull-right[ 
-* Jakarta, located in a lowland delta area with close to 50% below regional water level, is vulnerable to coastal and river flooding due to monsoons, sea-level rise and insufficient and faulty drainage infrastructure &lt;a name=cite-c40citiesC40GoodPractice2016&gt;&lt;/a&gt;([C40 Cities, 2016](#bib-c40citiesC40GoodPractice2016)). 
+* Jakarta, **located in a lowland delta area** with close to **50% below regional water level, is vulnerable to coastal** and **river flooding due to monsoons, sea-level rise** and **insufficient** and **faulty drainage infrastructure** &lt;a name=cite-c40citiesC40GoodPractice2016&gt;&lt;/a&gt;([C40 Cities, 2016](#bib-c40citiesC40GoodPractice2016)). 
 
-* An estimated 90% of North Jakarta is expected to lie below sea level in 2030 ([C40 Cities, 2016](#bib-c40citiesC40GoodPractice2016)).
+* An estimated **90% of North Jakarta is expected to lie below sea level in 2030** ([C40 Cities, 2016](#bib-c40citiesC40GoodPractice2016)).
 
 
  ] 
@@ -105,11 +101,11 @@ class: center, middle, inverse, title-slide
 
 .panel[.panel-name[The Problem]
 
-* The rapid rates of land subsidence play a key role in relative sea- level rise: estimates suggest an average subsidence rate of 40 mm/year, in some places up to 20 cm/year.
+* The rapid rates of **land subsidence** play a key role in **relative sea- level rise**: estimates suggest an average subsidence rate of 40 mm/year, in some places up to 20 cm/year.
 
-* As the sea-level rises, saltwater intrusion of groundwater tables also becomes a problem.
+* As the **sea-level rises, saltwater intrusion of groundwater tables** also becomes a problem.
 
-* Currently, detailed understanding of the characteristics and mechanisms of land subsidence in Jakarta, both spatially and temporally, remains incomplete &lt;a name=cite-abidinStudyRiskImpacts2015&gt;&lt;/a&gt;([Abidin, Andreas, Gumilar, and Brinkman, 2015a](#bib-abidinStudyRiskImpacts2015)). 
+* Currently, detailed understanding of the **characteristics and mechanisms of land subsidence** in Jakarta, both **spatially and temporally**, remains incomplete &lt;a name=cite-abidinStudyRiskImpacts2015&gt;&lt;/a&gt;([Abidin, Andreas, Gumilar, and Brinkman, 2015a](#bib-abidinStudyRiskImpacts2015)). 
 
 .panel[.panel-name[Existing Policy]
 
