changes to global agendas and goals

--- a/index.html
+++ b/index.html
@@ -29,13 +29,12 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x6ed9bb9bb054c1cb5270ac9284e5dff","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x3a78178d38e4a69a403442d957bac3e","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
     <script src="libs/xaringanExtra_fit-screen-0.2.6/fit-screen.js"></script>
     <link href="libs/xaringanExtra-extra-styles-0.2.6/xaringanExtra-extra-styles.css" rel="stylesheet" />
-    <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
@@ -250,24 +249,36 @@ class: center, middle, inverse, title-slide
 ]
 
 ---
+## Benefits of our proposed project
+
+* To produce enhanced and comprehensive information on land subsidence.
+
+* To provide solutions to different aspects of the NCICD master plan -- enhancing flood safety, land reclamation, and reinforcement of infrastructure. 
+
+* To incorporate the global agendas and goals into regional development as promised during the UN meetings.
+
+&lt;img src="UNDRR.jpeg" width="60%" style="display: block; margin: auto;" /&gt;
+
+---
 
 ## Global agendas and goals 1
 ###  The Sendai Framework for Disaster Risk Reduction (2015)
 
 .pull-left[
+
 &lt;img src="SendaiFramrwork.jpeg" width="80%" /&gt;
 
 ]
 .pull-right[
 
 
-* To understand disaster risk under climate change
+* To understand disaster risks induced by land subsidence.
 
-* To reduce vulnerability of coastal regions by enhancing resilience capacity e.g., preparedness to disasters
+* To reduce vulnerability of coastal regions by enhancing resilience capacity e.g., preparedness and awareness to disasters. 
 
-* To strengthen local governance towards disaster risk management in accordance with this global framework
+* To strengthen local governance towards disaster risks management.
 
-* Recognises the state has the primary role for DRR
+* **Recognises the state has the primary role for DRR.**
 
 
 
@@ -281,12 +292,19 @@ class: center, middle, inverse, title-slide
 
 .pull-left[
 
-&lt;img src="E_PRINT_06.jpg" width="80%" /&gt;
+&lt;img src="E_PRINT_06.jpg" width="50%" style="display: block; margin: auto;" /&gt;
+
+&lt;small&gt; **Target 6.4**
+By 2030, substantially increase water-use efficiency across all sectors and ensure sustainable withdrawals and supply of freshwater to address water scarcity and substantially reduce the number of people suffering from water scarcity &lt;/small&gt;
 ]
 .pull-right[
-**Target 6.4**
 
-* By 2030, substantially increase water-use efficiency across all sectors and ensure sustainable withdrawals and supply of freshwater to address water scarcity and substantially reduce the number of people suffering from water scarcity
+By addressing land subsidence, we can...
+
+* Avoid seawater intrusion to groundwater table.
+
+* Ensure clean groundwater supply be accessible and available to everyone
+
 ]
 
 
@@ -295,67 +313,45 @@ class: center, middle, inverse, title-slide
 .panel[.panel-name[SDG 11]
 .pull-left[
 
-&lt;img src="E_PRINT_11.jpg" width="80%" /&gt;
+&lt;img src="E_PRINT_11.jpg" width="50%" style="display: block; margin: auto;" /&gt;
+
+&lt;small&gt;**Target 11.3**
+By 2030, enhance inclusive and sustainable urbanization and capacity for participatory, integrated and sustainable human settlement planning and management in all countries. &lt;/small&gt;
 ]
 .pull-right[
-**Target 11.3**
 
-* By 2030, enhance inclusive and sustainable urbanization and capacity for participatory, integrated and sustainable human settlement planning and management in all countries
+By addressing land subsidence, we can...
+
+* Protect local communities and businesses from disasters and risks.
+
+* Reduce exposure of local communities from land subsidence while sustaining urbanisation. 
 ]
 
-
-]
-
-.panel[.panel-name[SDG 13]
-.pull-left[
-
-&lt;img src="E_PRINT_13.jpg" width="80%" /&gt;
-]
-.pull-right[
-**Target 13.1**
-
-* Strengthen resilience and adaptive capacity to climate-related hazards and natural disasters in all countries
-
-**Target 13.2**
-* Integrate climate change measures into national policies, strategies and planning
-
-]
 
 ]
 
 .panel[.panel-name[SDG 15]
 .pull-left[
-&lt;img src="E_PRINT_15.jpg" width="80%" /&gt;
+&lt;img src="E_PRINT_15.jpg" width="50%" style="display: block; margin: auto;" /&gt;
+
+&lt;small&gt;**Target 15.3**
+By 2030, combat desertification, restore degraded land and soil, including land affected by desertification, drought and floods, and strive to achieve a land degradation-neutral world. &lt;/small&gt;
 ]
 .pull-right[
-**Target 15.3**
 
-* By 2030, combat desertification, restore degraded land and soil, including land affected by desertification, drought and floods, and strive to achieve a land degradation-neutral world
+By addressing land subsidence, we can...
+
+* Reduce damage to infrastructure such as roads and buildings.
+
+* Reduce flood risk in terms of extent.
+
+* Mitigate negative impacts on local (coastal) ecosystem. 
+
 ]
 ]
 ]
 &lt;small&gt;Source: [The 17 Goals | Sustainable Development](https://sdgs.un.org/goals)&lt;/small&gt;
 ---
-
-
-## Benefits of Addressing Land Subsidence
-
-The NCICD considers a variety of aspects such as flood safety, land reclamation, improving mobility and infrastructure and increasing environmental green space. By producing **enhanced information on land subsidence**, our project can directly improve solutions to all sections of the master plan.
-
-### Specific Benefits include
-
-- Reduced loss of land.
-
-- Reduced damage to infrastructure such as roads and buildings.
-
-- Reduced flood risk.
-
-- Protection of businesses and industry such as coastal tourism. 
-
-- To ensure clean groundwater supply by avoiding seawater intrusion to groundwater table.
-
----
-
 
 
 ## Objectives
@@ -727,7 +723,7 @@ class: top
 
 - Maintaining a standard SOP so that the project isn't affected by leaving employees.
 
-- Alternative data sets from other satellites are available.
+- Purchase alternative data sets, if needed, using the miscellaneous budget. 
 
 - Uniform Budget-Head so that changing political parties doesn't affect the project.
 
@@ -753,6 +749,10 @@ class: text-justify
 
 
 
+
+---
+class: center, inverse
+### Thanks all for your time!
 
 ---
 class: text-justify
