--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x3a78178d38e4a69a403442d957bac3e","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x785dd350222433983a215e060627427","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -110,7 +110,7 @@ class: center, middle, inverse, title-slide
 
 .pull-left[ 
 
-&lt;span style="font-size: 12pt;"&gt;  To protect Jakarta from coastal flooding, the National Capital Integrated Coastal Development (NCICD) under their Master Plan was proposed, with the main plan surrounding the construction of seawall which could reach 32km in length &lt;a name=cite-indonesiainvestmentsGiantSeaWall&gt;&lt;/a&gt;([Indonesia Investments, 2024](#bib-indonesiainvestmentsGiantSeaWall)).
+&lt;span style="font-size: 12pt;"&gt;  To protect Jakarta from coastal flooding, **the National Capital Integrated Coastal Development (NCICD) under their Master Plan** was proposed, with the main plan surrounding the construction of seawall which could reach 32km in length &lt;a name=cite-indonesiainvestmentsGiantSeaWall&gt;&lt;/a&gt;([Indonesia Investments, 2024](#bib-indonesiainvestmentsGiantSeaWall)).
 
   &lt;img src="sea_wall.jpg" width="320" height="240" /&gt; 
 
