few changes on the impact

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="libs/tile-view-0.2.6/tile-view.js"></script>
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x785dd350222433983a215e060627427","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x6060704eeb749948a4cb33336241db1","expires":1}</script>
     <script src="libs/himalaya-1.1.0/himalaya.js"></script>
     <link href="libs/editable-0.2.6/editable.css" rel="stylesheet" />
     <script src="libs/editable-0.2.6/editable.js"></script>
@@ -206,7 +206,7 @@ class: center, middle, inverse, title-slide
 
 * Possibility of seawater intrusion to the lowered groundwater table, thus lack of clean water supply
 
-* Disruption to daily activities of people.
+* Disturbance of people daily activities.
 
 * Damage of infrastructure
 
@@ -217,13 +217,13 @@ class: center, middle, inverse, title-slide
 
 .panel[.panel-name[Economic]
 
-* Increase in maintenance cost of infrastructure.
+* Enlarge of infrastructure maintenance cost.
 
-* Decrease in land and property values.
+* Reduction in land and property values.
 
-* Abandoned buildings and facilities.
+* Buildings and facilities Abandonment.
 
-* Disruption to economic activities.
+* Disruption of economic activities.
 
 &lt;a name=cite-arieldinarLandSubsidenceForgotten2018&gt;&lt;/a&gt;[Ariel Dinar, Jose Albiac, Encarna Esteban, Elena Calvo, and Gerardo Herrera (2018)](#bib-arieldinarLandSubsidenceForgotten2018)
 
